[package]
name = "sendit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
hex = "0.4.3"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sha2 = "0.10.6"
log = "0.4"
simple_logger = "4.0.0"
